--- a/Homework2_MongoDB/Group5_BDMM_HW2.ipynb
+++ b/Homework2_MongoDB/Group5_BDMM_HW2.ipynb
@@ -2102,7 +2102,7 @@
    "source": [
     "- We applied **data type conversion** to the price-related fields (`price`, `security_deposit`, `cleaning_fee`, `weekly_price`, `monthly_price`), ensuring they are consistently stored as `Decimal128` (or `double`), because these represent monetary values. Handling `null` or missing values appropriately during conversion (e.g., defaulting to `null` or `0.0` if applicable) ensures accurate financial calculations. We expect **improved query performance for range/comparison queries on prices and reliable aggregation results (like averages)**.\n",
     "\n",
-    "**Note:** `weekly_price` and `monthly_price` often appear as `None` after conversion, indicating they were originally missing or `null`, which is expected."
+    "**Note:** `weekly_price` and `monthly_price` often appear as `None` after conversion, indicating they were originally missing or `null`."
    ]
   },
   {
@@ -4536,8 +4536,7 @@
     "\n",
     "- As shown in the results above, the maximum value for the field **`price`** is $48\\;842.0$. The field price indicates the price per night for a listing.\n",
     "  - This value is extremely high and seems unrealistic for a single night stay. \n",
-    "  - It is possible that this value is a result of data entry errors or outliers in the dataset.\n",
-    "  - To further investigate, we can check the distribution of prices and identify any potential outliers."
+    "  - It is possible that this value is a result of data entry errors or outliers in the dataset."
    ]
   },
   {
@@ -4642,8 +4641,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- As we can from the results above, there are some listings with $0$ `bathrooms` with property types that do not make sense (e.g ***House***, ***Apartment***, etc.).\n",
-    "  - To further investigate, we would need more information about each listings, access to the databases's metadata and to the host_url (links to the listings don't seem to work).\n",
+    "- As we can see from the results above, there are some listings with $0$ `bathrooms` with property types that do not make sense (e.g ***House***, ***Apartment***, etc.).\n",
+    "  - To further investigate, we would need more information about each listings, access to the database's metadata and to the host_url (links to the listings don't seem to work).\n",
     "  - Hence no changes will be made\n"
    ]
   },
@@ -4738,8 +4737,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- As we can from the results above, there are some listings with $0$ `bedrooms` with property types that do not make sense (e.g ***House*** etc.).\n",
-    "  - As explained in the case of bathrooms, to further investigate these cases, we would need more information about each listings, access to the databases's metadata and to the **`host_url`** (links to the listings don't seem to work).\n",
+    "- As we can see from the results above, there are some listings with $0$ `bedrooms` with property types that do not make sense (e.g ***House*** etc.).\n",
+    "  - As explained in the case of bathrooms, to further investigate these cases, we would need more information about each listings, access to the database's metadata and to the **`host_url`** (links to the listings don't seem to work).\n",
     "  - Hence no changes will be made\n"
    ]
   },
@@ -5136,9 +5135,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- We noticed that $245$ ($4.41\\%$) listings have a **`number_of_reviews`** that doesn’t match the actual number of reviews in the reviews array. **For now, we’re not doing anything** about it because this field is probably just a leftover helper or display field from the past. Since it’s not causing any issues and fixing it would take extra time and processing, we’re choosing to leave it as is. If it ever becomes important later, we can clean it up in the background without affecting the system.\n",
+    "- We noticed that $244$ ($4.39\\%$) listings have a **`number_of_reviews`** that doesn’t match the actual number of reviews in the reviews array. **For now, we’re not doing anything** about it because this field is probably just a leftover helper or display field from the past. Since it’s not causing any issues and fixing it would take extra time and processing, we’re choosing to leave it as is. If it ever becomes important later, we can clean it up in the background without affecting the system.\n",
     " \n",
-    "- Additionally, due to the lack of metadata, we don't know if this mismatch is due to a problem during the web scraping process or due to an out of sync issue."
+    "- Additionally, due to the lack of metadata, we don't know if this mismatch is due to a problem during the web scraping process or due to an out of sync issue.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "**Note:** The same analysis could be done for **`transactions.transaction_count`** but due to the same reason we will not do it."
    ]
   },
   {
@@ -5562,6 +5565,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Note:** In the original data model, where transactions (`transactions.transactions`) are **embedded** within the main listing document (`listingsAndReviews_HW2`), **all transactions within that document inherently belong to that listing**. There isn't a `listing_id` field within each individual transaction to verify if it belongs to another listing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### **Invalid Dates**"
    ]
   },
@@ -5621,21 +5631,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of documents with first_review < transactions.transactions.date: 0\n"
+     ]
+    }
+   ],
    "source": [
     "# Check if 'first_review' < 'transactions.transactions.date' (Invalid data)\n",
     "invalid_dates = db.listingsAndReviews_HW2.find({\n",
-    "    \"$expr\": {\n",
+    "    \"$expr\": {        \n",
+    "        # Check if first_review is less than the date of the first transaction\n",
     "        \"$lt\": [\"$first_review\", {\"$arrayElemAt\": [\"$transactions.transactions.date\", 0]}]\n",
     "    }\n",
     "})\n",
-    "if len(list(invalid_dates)) > 0:\n",
+    "if int(len(list(invalid_dates))) > 0:\n",
     "    for doc in invalid_dates:\n",
     "        print(f\"Document with _id: {doc['_id']} has first_review: {doc['first_review']} < transactions.transactions.date: {doc['transactions']['transactions'][0]['date']}\")\n",
-    "else:\n",
-    "    print(\"No documents found with first_review < transactions.transactions.date.\")"
+    "    \n",
+    "print(f\"Number of documents with first_review < transactions.transactions.date: {len(list(invalid_dates))}\")"
    ]
   },
   {
@@ -5717,13 +5736,13 @@
     "\n",
     "| #    | Step / Question                                       | What it Entails                                                   | Entities Involved                    \n",
     "| :--- | :---------------------------------------------------- | :---------------------------------------------------------------- | :------------------------------------ |\n",
-    "| **1** | **Assess Data Size**                                  | Determine current collection volume and size                       | `listingsAndReviews_HW2`             \n",
-    "| **2a**| **Most Common Use Case**                             | Show property info to customers (core details + sample reviews)    | `Listings`, `Reviews`               \n",
-    "| **2b (Q7)** | Unique amenities list for host registration         | Show all unique amenities; rarely changes                         | `Listings`, `Amenities` (New)      \n",
-    "| **2c (Q8)** | Top 20 reviewers and fast review count lookup      | Rank reviewers and return count per reviewer                      | `Reviews`, `Reviewers` (New)          \n",
+    "| **1** | Assess Data Size                                  | Determine current collection volume and size                       | `listingsAndReviews_HW2`             \n",
+    "| **2a**| Most Common Use Case                             | Show property info to customers (core details + sample reviews)    | `Listings`, `Reviews`               \n",
+    "| **2b (Q7)** | Unique amenities list for host registration         | Show all unique amenities; rarely changes                         | `Listings`, `Amenities`      \n",
+    "| **2c (Q8)** | Top 20 reviewers and fast review count lookup      | Rank reviewers and return count per reviewer                      | `Reviews`, `Reviewers`           \n",
     "| **2d (Q9)** | Average of review scores (dynamic metrics)        | Compute average across all review metrics                         | `Listings`, `Review_Scores` (Subdoc)  |\n",
-    "| **2e (Q10)**| Avg transaction value per property for time period | Time-based aggregation on transactions                            | `Transactions` (New), `Listings`      \n",
-    "| **2f (Q11)**| Summary page of top 10 cities + top listings       | Show city-level stats and example listings                        | `Listings`, `Reviews`, `CitySummary` (New) \n",
+    "| **2e (Q10)**| Avg transaction value per property for time period | Time-based aggregation on transactions                            | `Transactions`, `Listings`      \n",
+    "| **2f (Q11)**| Summary page of top 10 cities + top listings       | Show city-level stats and example listings                        | `Listings`, `Reviews`, `CitySummary` \n",
     "\n",
     "</center>\n",
     "\n",
@@ -5753,13 +5772,13 @@
     "\n",
     "<center>\n",
     "\n",
-    "| **Entities** | **Relationship Type** | **Cardinality** | **Embed or Reference?** | **Reasoning** | **Context in Project** |\n",
-    "| :---------------------- | :---------------- | :------------------------------------- | :---------- | :------------------------------------------ | :-------------------------------------------------------------- |\n",
+    "| **From Entity**         | **To Entity**     | **Relationship Type**                  | **Cardinality** | **Embed or Reference?**                         | **Reasoning** |\n",
+    "| :----------------------: | :----------------: | :------------------------------------- | :----------: | :------------------------------------------ | :-------------------------------------------------------------- |\n",
     "| `Listings`               | `Hosts`            | Listing has one Host                   | N:1         | **Reference `Hosts` in `Listings`**         | Avoid duplication; host info reused/updated                  |\n",
     "| `Listings`               | `Reviews`          | Listing has many Reviews               | 1:N         | **Reference `Listings`  in `Reviews`**    | Reviews grow; keeps listing doc lean                          |\n",
     "| `Reviews`                | `Reviewers`        | Review written by one Reviewer         | N:1         | **Reference `Reviewers` in `Reviews`**      | Reviewers write multiple reviews; enables reviewer tracking |\n",
-    "| `Listings`               | `Transactions`     | Listing has many Transactions          | 1:N         | **Reference `Listing` in `Transactions`**  | Time-series data; accessed separately                         |\n",
-    "| `Listings`               | `Amenities` (array)| Listing has many amenities             | 1:N         | **Embed `Amenities` in `Listing`**        | Small, static data; needed for listing reads                  | \n",
+    "| `Listings`               | `Transactions`     | Listing has many Transactions          | 1:N         | **Reference `Listings` in `Transactions`**  | Time-series data; accessed separately                         |\n",
+    "| `Listings`               | `Amenities` (array)| Listing has many amenities             | 1:N         | **Embed `Amenities` in `Listings`**        | Small, static data; needed for listing reads                  | \n",
     "| `City` (Optional)        | `Listings`         | City has many listings                 | 1:N         | **Both sides**  | City identified via `Listing.Address.market`; enables grouping/aggregation\n",
     "| `Listings`               | `ReviewScores`   | Listing has one set of review scores | 1:1         | **Embed `Review Scores` in `Listings`**    | Small, core data;                  |\n",
     "\n",
@@ -9138,7 +9157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -9241,7 +9260,7 @@
     }
    ],
    "source": [
-    "# Performance of the query (Q8)\n",
+    "# Performance of the query (Q8) - Find the number of reviews for a given reviewer ID\n",
     "print(\"\\n\\033[1mQuery performance:\\033[0m\")\n",
     "pprint(db.Reviewers.find({\"Reviewer_ID\": reviewer_id}).explain())"
    ]
@@ -9252,7 +9271,7 @@
    "source": [
     "> **Optimization Analysis (Q8):**\n",
     "> *   **Top 20 List:** The original query required unwinding all reviews and grouping (~0.58s). By applying the **Computed Pattern** (adding `ReviewCount` to the `Reviewers` collection) and **Indexing** (`ReviewCount: -1`), retrieving the top 20 reviewers becomes a simple `find().sort().limit()` operation on the `Reviewers` collection. This is significantly faster (~0.64s including the update vs ~0.58s initially - *Note: the aggregation to calculate counts for the update dominates here, but subsequent reads are fast*), as it directly uses the pre-computed and indexed count.\n",
-    "> *   **Individual Lookup:** The `get_review_count` function benefits immensely. Instead of aggregating the `Reviews` collection or the original `listingsAndReviews_HW2` collection (~0.14s-0.16s), it performs a fast, indexed `find_one` on the `Reviewers` collection using `Reviewer_ID` (~0.005s) or an aggregation with lookup for `Reviewer_Name` (~11.1s without name index, demonstrating the value of ID lookups or needing a name index).\n",
+    "> *   **Individual Lookup:** The `get_review_count` function benefits immensely. Instead of aggregating the `Reviews` collection (~0.14s) or the original `listingsAndReviews_HW2` collection, it performs a fast, indexed `find_one` on the `Reviewers` collection using either `Reviewer_ID` (~0.002s) or `Reviewer_Name` (which would benefit from its own index for similar speed).\n",
     "\n",
     "This demonstrates the benefit of the new schema for the frequent, targeted lookup requirement, while the top-20 list might be better handled by pre-computation (**Computed Pattern**) in a production scenario."
    ]
